# fakepaint

./: .gitignore  Cargo.toml  README.md
locals/: zh-CN.yml
src/: canvas.rs  color_editer.rs  export_image.rs  file.rs  image_button.rs  main.rs  new_file.rs  setup.rs  tile.rs  undo.rs
