[package]
name = "fakepaint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level=0

[profile.dev.package."*"]
opt-level=3

[dependencies]
eframe="0.22"
tracing-subscriber="0.3"
image="0.24"
serde_json = "1.0.97"
serde = "1.0.164"
